Revise README for JavaFX installation instructions
Updated README to improve clarity on JavaFX setup steps and installation instructions.